# Comfyui-marigold-intrinsics-PaGeR

./: LICENSE-MODEL  README.md  nodes.py  nodes_appearance.py  nodes_conditioning.py  nodes_lighting.py  nodes_loaders.py  nodes_pager.py  nodes_shared.py  pyproject.toml  requirements.txt  splitloader.py
Marigold/: README.md
Marigold/resnet/: __init__.py  downsampling.py  resnet.py  upsampling.py
Marigold/unet/: attention.py  attention_processor.py  transformer_2d.py  unet_2d_blocks.py  unet_2d_condition.py
Marigold/vae/: __init__.py  autoencoder_kl.py  vae.py
src/: pager.py
src/utils/: conv_padding.py  geometry_utils.py  loss.py  lr_scheduler.py  utils.py
