[project]
name = "Comfyui-marigold-intrinsics-PaGeR"
description = "This custom node pack provides Marigold IID nodes and PaGeR ERP geometry nodes."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["accelerate", "omegaconf", "pytorch360convert", "matplotlib", "trimesh"]

[project.urls]
Repository = "https://github.com/Apache0ne/Comfyui-marigold-intrinsics-PaGeR"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Apache0ne/Comfyui-marigold-intrinsics-PaGeR/wiki"
"Bug Tracker" = "https://github.com/Apache0ne/Comfyui-marigold-intrinsics-PaGeR/issues"

[tool.comfy]
PublisherId = "apacheone"
DisplayName = "Comfyui-marigold-intrinsics-PaGeR"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

